--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 .main {
   max-width: 50%;
   margin: auto;
@@ -16,12 +20,25 @@ h1 {
 }
 
 .book-info {
-  padding: 10px 0;
-  border-bottom: 1px solid #000;
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 100%;
+  padding: 4px 12px;
+  box-sizing: border-box;
+}
+
+.book-info:nth-child(odd) {
+  background-color: #eceaea;
+}
+
+button {
+  background: #fff;
+  padding: 4px 12px;
+  border-width: 3px;
+  font-weight: 700;
+  font-size: 13px;
+  box-shadow: 2px 2px;
 }
 
 .book-info p {
@@ -36,7 +53,18 @@ form {
   margin-bottom: 20px;
 }
 
+.form-group input {
+  width: 100%;
+  border-width: 3px;
+}
+
 .book-list-container {
   width: 100%;
   border: 3px solid black;
+}
+
+hr {
+  width: 50%;
+  background: black;
+  height: 3px;
 }
