--- a/index.css
+++ b/index.css
@@ -3,12 +3,20 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: cursive;
+  height: 100vh;
+  margin: 0;
+  position: relative;
+}
+
 nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
   border: 3px solid black;
   padding: 0 8px;
+  background-color: #fff;
 }
 
 nav .navbar-title {
@@ -37,8 +45,13 @@ nav ul li a {
   font-weight: 500;
 }
 
+nav ul li a.active {
+  color: #0284c8;
+}
+
 .current-date {
   text-align: right;
+  padding-right: 5px;
 }
 
 .current-date p {
@@ -54,10 +67,6 @@ nav ul li a {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-}
-
-body {
-  font-family: cursive;
 }
 
 h1 {
@@ -92,6 +101,7 @@ button {
 
 form {
   padding: 20px 0;
+  width: 45%;
 }
 
 .form-group {
@@ -100,12 +110,21 @@ form {
 
 .form-group input {
   width: 100%;
-  border-width: 3px;
+  border: 3px solid black;
+  padding: 7px;
+}
+
+.form-group:last-child {
+  text-align: right;
 }
 
 .book-list-container {
   width: 100%;
   border: 3px solid black;
+}
+
+.book-list-page {
+  width: 100%;
 }
 
 hr {
@@ -120,10 +139,14 @@ hr {
 }
 
 footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
   width: 100%;
   border: 3px solid black;
   padding: 0 8px;
   margin-top: 40px;
+  background-color: #fff;
 }
 
 footer p {
